--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,12 @@
 server.port=8081
-
+springdoc.swagger-ui.enabled=true
+urshop.client.url=http://localhost:8080/api
 
 spring.security.user.name=user
 spring.security.user.password=12345test
 
-# Crypto Configuration
-crypto.secret-key=asdqweasdqweasdwqaedasdwqaeadsad
-crypto.secret-key-algorithm=AES
-crypto.transformation=AES/GCM/NoPadding
-crypto.gcm-tag-length=16
-crypto.gcm-iv-length=12
-
 # JWT Configuration
 jwt.algorithm=HS256
-jwt.secret-key=qwezdft4rqesdawadasdasdasdasdasdasdasqweweasadfs
+jwt.secret-key=jwt-secret-key-test
 jwt.issuer=jwt-implementation
 jwt.expiration=1d
